--- a/FullApp_v1/V2_App/templates/indicators.html
+++ b/FullApp_v1/V2_App/templates/indicators.html
@@ -141,79 +141,48 @@
                         text-align: right;
                       "
                     >
-                      <button
-                        class="btn btn-primary"
-                        type="button"
-                        style="
-                          font-size: 12px;
-                          padding-top: 4.5px;
-                          padding-right: 9px;
-                          padding-bottom: 4.5px;
-                          padding-left: 9px;
-                        "
-                      >
-                        1d</button
-                      ><button
-                        class="btn btn-primary"
-                        type="button"
-                        style="
-                          font-size: 12px;
-                          padding-top: 4.5px;
-                          padding-right: 9px;
-                          padding-bottom: 4.5px;
-                          padding-left: 9px;
-                        "
-                      >
-                        1w</button
-                      ><button
-                        class="btn btn-primary"
-                        type="button"
-                        style="
-                          font-size: 12px;
-                          padding-top: 4.5px;
-                          padding-right: 9px;
-                          padding-bottom: 4.5px;
-                          padding-left: 9px;
-                        "
-                      >
-                        1m</button
-                      ><button
-                        class="btn btn-primary"
-                        type="button"
-                        style="
-                          font-size: 12px;
-                          padding-top: 4.5px;
-                          padding-right: 9px;
-                          padding-bottom: 4.5px;
-                          padding-left: 9px;
-                        "
-                      >
-                        3m</button
-                      ><button
-                        class="btn btn-primary"
-                        type="button"
-                        style="
-                          font-size: 12px;
-                          padding-top: 4.5px;
-                          padding-right: 9px;
-                          padding-bottom: 4.5px;
-                          padding-left: 9px;
-                        "
-                      >
-                        6m</button
-                      ><button
-                        class="btn btn-primary"
-                        type="button"
-                        style="
-                          font-size: 12px;
-                          padding-top: 4.5px;
-                          padding-right: 9px;
-                          padding-bottom: 4.5px;
-                          padding-left: 9px;
-                        "
-                      >
-                        12m
-                      </button>
+                    <form action="" method="post">
+                      <button class="btn btn-primary" name="foox" value="1" style="
+                      font-size: 12px;
+                      padding-top: 4.5px;
+                      padding-right: 9px;
+                      padding-bottom: 4.5px;
+                      padding-left: 9px;
+                    ">&nbsp;1d</button>
+
+                      <button class="btn btn-primary" name="foox" value="2" style="
+                      font-size: 12px;
+                      padding-top: 4.5px;
+                      padding-right: 9px;
+                      padding-bottom: 4.5px;
+                      padding-left: 9px;
+                      ">&nbsp;1w</button>
+
+                      <button class="btn btn-primary" name="foox" value="3" style="
+                                              font-size: 12px;
+                                              padding-top: 4.5px;
+                                              padding-right: 9px;
+                                              padding-bottom: 4.5px;
+                                              padding-left: 9px;
+                                          ">&nbsp;1m</button>
+
+                      <button class="btn btn-primary" name="foox" value="4" style="
+                      font-size: 12px;
+                      padding-top: 4.5px;
+                      padding-right: 9px;
+                      padding-bottom: 4.5px;
+                      padding-left: 9px;
+                      ">&nbsp;6m</button>
+
+                      <button class="btn btn-primary" name="foox" value="5" style="
+                                              font-size: 12px;
+                                              padding-top: 4.5px;
+                                              padding-right: 9px;
+                                              padding-bottom: 4.5px;
+                                              padding-left: 9px;
+                                          ">&nbsp;12m</button>
+                      
+                   </form>
                     </div>
                   </div>
 
@@ -244,79 +213,48 @@
                               text-align: right;
                             "
                           >
-                            <button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              1d</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              1w</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              1m</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              3m</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              6m</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              12m
-                            </button>
+                          <form action="" method="post">
+                            <button class="btn btn-primary" name="foox" value="1" style="
+                            font-size: 12px;
+                            padding-top: 4.5px;
+                            padding-right: 9px;
+                            padding-bottom: 4.5px;
+                            padding-left: 9px;
+                          ">&nbsp;1d</button>
+    
+                            <button class="btn btn-primary" name="foox" value="2" style="
+                            font-size: 12px;
+                            padding-top: 4.5px;
+                            padding-right: 9px;
+                            padding-bottom: 4.5px;
+                            padding-left: 9px;
+                            ">&nbsp;1w</button>
+    
+                            <button class="btn btn-primary" name="foox" value="3" style="
+                                                    font-size: 12px;
+                                                    padding-top: 4.5px;
+                                                    padding-right: 9px;
+                                                    padding-bottom: 4.5px;
+                                                    padding-left: 9px;
+                                                ">&nbsp;1m</button>
+    
+                            <button class="btn btn-primary" name="foox" value="4" style="
+                            font-size: 12px;
+                            padding-top: 4.5px;
+                            padding-right: 9px;
+                            padding-bottom: 4.5px;
+                            padding-left: 9px;
+                            ">&nbsp;6m</button>
+    
+                            <button class="btn btn-primary" name="foox" value="5" style="
+                                                    font-size: 12px;
+                                                    padding-top: 4.5px;
+                                                    padding-right: 9px;
+                                                    padding-bottom: 4.5px;
+                                                    padding-left: 9px;
+                                                ">&nbsp;12m</button>
+                            
+                         </form>
                           </div>
                         </div>
       
@@ -347,79 +285,48 @@
                               text-align: right;
                             "
                           >
-                            <button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              1d</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              1w</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              1m</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              3m</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              6m</button
-                            ><button
-                              class="btn btn-primary"
-                              type="button"
-                              style="
-                                font-size: 12px;
-                                padding-top: 4.5px;
-                                padding-right: 9px;
-                                padding-bottom: 4.5px;
-                                padding-left: 9px;
-                              "
-                            >
-                              12m
-                            </button>
+                          <form action="" method="post">
+                            <button class="btn btn-primary" name="foox" value="1" style="
+                            font-size: 12px;
+                            padding-top: 4.5px;
+                            padding-right: 9px;
+                            padding-bottom: 4.5px;
+                            padding-left: 9px;
+                          ">&nbsp;1d</button>
+    
+                            <button class="btn btn-primary" name="foox" value="2" style="
+                            font-size: 12px;
+                            padding-top: 4.5px;
+                            padding-right: 9px;
+                            padding-bottom: 4.5px;
+                            padding-left: 9px;
+                            ">&nbsp;1w</button>
+    
+                            <button class="btn btn-primary" name="foox" value="3" style="
+                                                    font-size: 12px;
+                                                    padding-top: 4.5px;
+                                                    padding-right: 9px;
+                                                    padding-bottom: 4.5px;
+                                                    padding-left: 9px;
+                                                ">&nbsp;1m</button>
+    
+                            <button class="btn btn-primary" name="foox" value="4" style="
+                            font-size: 12px;
+                            padding-top: 4.5px;
+                            padding-right: 9px;
+                            padding-bottom: 4.5px;
+                            padding-left: 9px;
+                            ">&nbsp;6m</button>
+    
+                            <button class="btn btn-primary" name="foox" value="5" style="
+                                                    font-size: 12px;
+                                                    padding-top: 4.5px;
+                                                    padding-right: 9px;
+                                                    padding-bottom: 4.5px;
+                                                    padding-left: 9px;
+                                                ">&nbsp;12m</button>
+                            
+                         </form>
                           </div>
                         </div>
       
