--- a/FullApp_v1/V2_App/templates/gauge.html
+++ b/FullApp_v1/V2_App/templates/gauge.html
@@ -6,14 +6,14 @@
   <title>ZingSoft Demo</title>
 
   <script nonce="undefined" src="https://cdn.zingchart.com/zingchart.min.js"></script>
-  <style>
+  <!-- <style>
     html,
     body,
     #myChart {
       height: 100%;
       width: 100%;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
